environments/gloo-edge-petstore-portal/1-gloo-edge-config/base/active/argo-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: argo-vs
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: upstream-tls
      namespace: gloo-system
  virtualHost:
    domains:
    - 'argocd-local.glootest.com'
    routes:
    - matchers:
      - prefix: /argo
      options:
        prefixRewrite: /argo
      routeAction:
        single:
          upstream:
            name: argocd-argocd-server-443
            namespace: gloo-system
